--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
 </head>
 <body>
       <section>
-    <h1>Celebrando a Conexão Campo Cidade
+    <h1>ℂ𝕖𝕝𝕖𝕓𝕣𝕒𝕟𝕕𝕠 𝕒 ℂ𝕠𝕟𝕖𝕩𝕒̃𝕠 ℂ𝕒𝕞𝕡𝕠 ℂ𝕚𝕕𝕒𝕕𝕖
               🌾🌿☘️🗡
     </h1>
-    <h2> A relação entre o campo e a cidade é essencial para o equilíbrio social,
-         econômico e ambiental. Enquanto o campo fornece alimentos, matérias-primas e recursos naturais, 
-         a cidade concentra tecnologia, serviços e mercados consumidores
-        Essa interdependência cria uma rede de trocas que fortalece 
-        o desenvolvimento sustentável, mostrando que, apesar das diferenças, ambos
-         os espaços caminham juntos e se completam </h2>
+    <h2> A ʀᴇʟᴀᴄ̧ᴀ̃ᴏ ᴇɴᴛʀᴇ ᴏ ᴄᴀᴍᴘᴏ ᴇ ᴀ ᴄɪᴅᴀᴅᴇ ᴇ́ ᴇssᴇɴᴄɪᴀʟ ᴘᴀʀᴀ ᴏ ᴇǫᴜɪʟɪ́ʙʀɪᴏ sᴏᴄɪᴀʟ, ᴇᴄᴏɴᴏ̂ᴍɪᴄᴏ ᴇ ᴀᴍʙɪᴇɴᴛᴀʟ. Eɴǫᴜᴀɴᴛᴏ ᴏ ᴄᴀᴍᴘᴏ ғᴏʀɴᴇᴄᴇ ᴀʟɪᴍᴇɴᴛᴏs, ᴍᴀᴛᴇ́ʀɪᴀs-ᴘʀɪᴍᴀs ᴇ ʀᴇᴄᴜʀsᴏs ɴᴀᴛᴜʀᴀɪs, ᴀ ᴄɪᴅᴀᴅᴇ ᴄᴏɴᴄᴇɴᴛʀᴀ ᴛᴇᴄɴᴏʟᴏɢɪᴀ, sᴇʀᴠɪᴄ̧ᴏs ᴇ ᴍᴇʀᴄᴀᴅᴏs ᴄᴏɴsᴜᴍɪᴅᴏʀᴇs Essᴀ ɪɴᴛᴇʀᴅᴇᴘᴇɴᴅᴇ̂ɴᴄɪᴀ ᴄʀɪᴀ ᴜᴍᴀ ʀᴇᴅᴇ ᴅᴇ ᴛʀᴏᴄᴀs ǫᴜᴇ ғᴏʀᴛᴀʟᴇᴄᴇ ᴏ ᴅᴇsᴇɴᴠᴏʟᴠɪᴍᴇɴᴛᴏ sᴜsᴛᴇɴᴛᴀ́ᴠᴇʟ, ᴍᴏsᴛʀᴀɴᴅᴏ ǫᴜᴇ, ᴀᴘᴇsᴀʀ ᴅᴀs ᴅɪғᴇʀᴇɴᴄ̧ᴀs, ᴀᴍʙᴏs ᴏs ᴇsᴘᴀᴄ̧ᴏs ᴄᴀᴍɪɴʜᴀᴍ ᴊᴜɴᴛᴏs ᴇ sᴇ ᴄᴏᴍᴘʟᴇᴛᴀᴍ </h2>
     <img class = "imagem" src="img1.png" alt="">
 
     <a href="index1.html">CONCEITO DA CONEXÃO</a>
