--- a/index2.html
+++ b/index2.html
@@ -8,13 +8,15 @@
 </head>
 <body>
      <section>
-    <h1> Filmes "It Girl"</h1>
-    <h2>Momentos especiais entre amigas, como nos filmes de "it girls" são importantes porque fortalecem a amizade, criam memorias únicas e fazem a gente incrível ao lado de quem nos entende de verdade.
-    <br>LISTA DE FILMES:
+    <h1>𝕆 ℂ𝕠𝕣𝕒𝕔̧𝕒̃𝕠 ℚ𝕦𝕖 𝔸𝕝𝕚𝕞𝕖𝕟𝕥𝕒 𝕒 ℂ𝕚𝕕𝕒𝕕𝕖 </h1>
+    <h2>
+    <br> 𝗦𝗮𝗯𝗶𝗮 𝗾𝘂𝗲 𝗼 𝗰𝗮𝗳𝗲́ 𝗾𝘂𝗲 𝘃𝗼𝗰𝗲̂ 𝘁𝗼𝗺𝗮 𝗱𝗲 𝗺𝗮𝗻𝗵𝗮̃ 𝗽𝗼𝗱𝗲 𝘁𝗲𝗿 𝘃𝗶𝗻𝗱𝗼 𝗱𝗲 𝘂𝗺𝗮 𝗳𝗮𝘇𝗲𝗻𝗱𝗮 𝗮 𝗺𝗲𝗻𝗼𝘀 𝗱𝗲 𝟭𝟬𝟬𝗸𝗺 𝗱𝗮 𝘀𝘂𝗮 𝗰𝗶𝗱𝗮𝗱𝗲?
+    
     <br>-O diabo veste prada 
     <br>-Meninas Malvadas
     <br>-Legalmente Loira
-    <br>-Para Todos os Garotos que já amei</h2>
+    <br>-Para Todos os Garotos que já ame MomentosF especiais entre amigas, como nos filmes de "it girls" são importantes porque fortalecem a amizade, criam memorias únicas e fazem a gente incrível ao lado de quem nos entende de verdade.
+  </h2>
     <img class = "imagem" src="img2.png" alt="">
 
     <a href="index3.html">ir para proximo</a>
