--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
     <h1>𝕆 ℂ𝕠𝕣𝕒𝕔̧𝕒̃𝕠 ℚ𝕦𝕖 𝔸𝕝𝕚𝕞𝕖𝕟𝕥𝕒 𝕒 ℂ𝕚𝕕𝕒𝕕𝕖 </h1>
     <h2>
     <br> 𝗦𝗮𝗯𝗶𝗮 𝗾𝘂𝗲 𝗼 𝗰𝗮𝗳𝗲́ 𝗾𝘂𝗲 𝘃𝗼𝗰𝗲̂ 𝘁𝗼𝗺𝗮 𝗱𝗲 𝗺𝗮𝗻𝗵𝗮̃ 𝗽𝗼𝗱𝗲 𝘁𝗲𝗿 𝘃𝗶𝗻𝗱𝗼 𝗱𝗲 𝘂𝗺𝗮 𝗳𝗮𝘇𝗲𝗻𝗱𝗮 𝗮 𝗺𝗲𝗻𝗼𝘀 𝗱𝗲 𝟭𝟬𝟬𝗸𝗺 𝗱𝗮 𝘀𝘂𝗮 𝗰𝗶𝗱𝗮𝗱𝗲?
-    
+        O que parece distante na mesa do café da manhã, na verdade, nasceu bem perto de nós, nas mãos de quem trabalha no campo todos os dias.
     <br>-O diabo veste prada 
     <br>-Meninas Malvadas
     <br>-Legalmente Loira
