--- a/index3.html
+++ b/index3.html
@@ -12,7 +12,7 @@
     <h2>
     <br>𝗔𝗻𝘁𝗲𝘀 𝗱𝗲 𝗰𝗵𝗲𝗴𝗮𝗿 𝗮̀𝘀 𝗽𝗿𝗮𝘁𝗲𝗹𝗲𝗶𝗿𝗮𝘀, 𝗰𝗮𝗱𝗮 𝗽𝗿𝗼𝗱𝘂𝘁𝗼 𝘁𝗲𝗺 𝘂𝗺𝗮 𝗵𝗶𝘀𝘁𝗼́𝗿𝗶𝗮 𝗱𝗲 𝘃𝗶𝗮𝗴𝗲𝗺 𝗲 𝘁𝗿𝗮𝗻𝘀𝗳𝗼𝗿𝗺𝗮𝗰̧𝗮̃𝗼 𝗾𝘂𝗲 𝗰𝗼𝗺𝗲𝗰̧𝗮 𝗹𝗮́ 𝗻𝗼 𝗰𝗮𝗺𝗽𝗼!
         𝑴𝒖𝒊𝒕𝒂 𝒈𝒆𝒏𝒕𝒆 𝒏𝒆𝒎 𝒊𝒎𝒂𝒈𝒊𝒏𝒂 𝒐 𝒄𝒂𝒎𝒊𝒏𝒉𝒐 𝒒𝒖𝒆 𝒐𝒔 𝒂𝒍𝒊𝒎𝒆𝒏𝒕𝒐𝒔 𝒑𝒆𝒓𝒄𝒐𝒓𝒓𝒆𝒎 𝒂𝒕𝒆́ 𝒄𝒉𝒆𝒈𝒂𝒓 𝒂𝒐 𝒎𝒆𝒓𝒄𝒂𝒅𝒐. 𝑶 𝒍𝒆𝒊𝒕𝒆 𝒒𝒖𝒆 𝒗𝒐𝒄𝒆̂ 𝒕𝒐𝒎𝒂, 𝒂𝒔 𝒇𝒓𝒖𝒕𝒂𝒔 𝒒𝒖𝒆 𝒗𝒐𝒄𝒆̂ 𝒄𝒐𝒎𝒑𝒓𝒂 𝒆 𝒂𝒕𝒆́ 𝒐 𝒑𝒂̃𝒐𝒛𝒊𝒏𝒉𝒐 𝒅𝒂 𝒑𝒂𝒅𝒂𝒓𝒊𝒂 𝒄𝒐𝒎𝒆𝒄̧𝒂𝒎 𝒔𝒖𝒂 𝒉𝒊𝒔𝒕𝒐́𝒓𝒊𝒂 𝒏𝒐 𝒄𝒂𝒎𝒑𝒐. 𝑫𝒆𝒑𝒐𝒊𝒔 𝒅𝒆 𝒄𝒐𝒍𝒉𝒊𝒅𝒐𝒔 𝒐𝒖 𝒑𝒓𝒐𝒅𝒖𝒛𝒊𝒅𝒐𝒔, 𝒆𝒍𝒆𝒔 𝒑𝒂𝒔𝒔𝒂𝒎 𝒑𝒐𝒓 𝒕𝒓𝒂𝒏𝒔𝒑𝒐𝒓𝒕𝒆𝒔, 𝒊𝒏𝒅𝒖́𝒔𝒕𝒓𝒊𝒂𝒔 𝒆 𝒄𝒆𝒏𝒕𝒓𝒐𝒔 𝒅𝒆 𝒅𝒊𝒔𝒕𝒓𝒊𝒃𝒖𝒊𝒄̧𝒂̃𝒐 𝒂𝒕𝒆́ 𝒇𝒊𝒏𝒂𝒍𝒎𝒆𝒏𝒕𝒆 𝒂𝒑𝒂𝒓𝒆𝒄𝒆𝒓𝒆𝒎 𝒏𝒂𝒔 𝒑𝒓𝒂𝒕𝒆𝒍𝒆𝒊𝒓𝒂𝒔 𝒅𝒂 𝒄𝒊𝒅𝒂𝒅𝒆. 𝑷𝒐𝒓 𝒕𝒓𝒂́𝒔 𝒅𝒆 𝒄𝒂𝒅𝒂 𝒑𝒓𝒐𝒅𝒖𝒕𝒐, 𝒆𝒙𝒊𝒔𝒕𝒆 𝒖𝒎 𝒑𝒓𝒐𝒄𝒆𝒔𝒔𝒐 𝒒𝒖𝒆 𝒄𝒐𝒏𝒆𝒄𝒕𝒂 𝒐 𝒓𝒖𝒓𝒂𝒍 𝒂𝒐 𝒖𝒓𝒃𝒂𝒏𝒐 𝒕𝒐𝒅𝒐𝒔 𝒐𝒔 𝒅𝒊𝒂𝒔.
-       Muita gente nem imagina o caminho que os alimentos percorrem até chegar ao mercado. O leite que você toma, as frutas que compra e até o pãozinho da padaria começam sua história lá no campo.</h2>
+       ,<br> Muita gente nem imagina o caminho que os alimentos percorrem até chegar ao mercado. O leite que você toma, as frutas que compra e até o pãozinho da padaria começam sua história lá no campo.</h2>
     <img class = "imagem" src="img2.png" alt="">
 
     <a href="index.html">ir para proximo</a>
