--- a/index1.html
+++ b/index1.html
@@ -12,7 +12,7 @@
     <img class = "imagem" src="img2.png" alt="">
 
     <a href="index2.html"></a>
-    <img src="" alt="">
+    <img src="agro.jpg" alt="agro.jpg">
 </section>
 </body>
 </html>
