--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,7 @@
     <img class = "imagem" src="img2.png" alt="">
 
     <a href="index3.html">ir para proximo</a>
+    <img src="cafe.jpg" alt="cafe">
 </section>
 </body>
 </html>
