--- a/index3.html
+++ b/index3.html
@@ -16,6 +16,7 @@
     <img class = "imagem" src="img2.png" alt="">
 
     <a href="index.html">ir para proximo</a>
+    <img src="agrinho.jpg" alt="agro">
 </section>
 </body>
 </html>
