--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <img class = "imagem" src="img1.png" alt="">
 
     <a href="index1.html">CONCEITO DA CONEXÃO</a>
+    <img src="campo.jpg" alt="campo">
 </section>      
 </body>
 </html>
